force-app/main/default/objects/HP_CaseSkill__c/HP_CaseSkill__c.object-meta.xml
<CustomObject>
    <label>HP_CaseSkill</label>
    <nameField>
        <label>HP_CaseSkillName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP_CaseSkills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>