force-app/main/default/objects/HP_CaseSkill__c/fields/Skill_label__c.field-meta.xml
<CustomField>
    <fullName>Skill_label__c</fullName>
    <label>Skill label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>