force-app/main/default/objects/HP_CaseSkill__c/fields/User_assign__c.field-meta.xml
<CustomField>
    <fullName>User_assign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User assigné</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HP_Case_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>